--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <title>The Boy Next Door</title>
 </head>
 
 <body>
-<h1>The Boy Next Door</h1>
-<p>First draft of website!</p>
+  
+  <h1>The Boy Next Door</h1>
+  <p>First draft of website!</p>
 
 
 </body>
