--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="static/main.css">
   <title>The Boy Next Door</title>
 </head>
 
 <body>
-  
+
   <h1>The Boy Next Door</h1>
   <p>First draft of website!</p>
 
