--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="static/main.css">
   <title>The Boy Next Door</title>
 </head>
