added header image and beginning of parallax

--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
 </head>
 
 <body>
+  <div class="parallax">
 
-  <h1>The Boy Next Door</h1>
-  <p>First draft of website!</p>
+    <div class="parallax__layer parallax_background">
+      <img src="/files/photos/andreasontractor.png" alt="Andreas on his tractor">
+    </div>
+
+    <header class="parallax__layer parallax_foreground">
+      <h1>The Boy Next Door</h1>
+    </header>
+
+    <div class="parallax__layer parallax_0">
+
+      <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
+
+    </div>
 
 
+
+
+  </div>
 </body>
-
 
 </html>
