--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <div class="parallax">
 
-    <div class="parallax__layer parallax_background">
+    <div class="parallax__layer parallax_layer--background">
       <img src="/files/photos/andreasontractor.png" alt="Andreas on his tractor">
     </div>
 
-    <header class="parallax__layer parallax_foreground">
+    <header class="parallax__layer parallax_layer--foreground">
       <h1>The Boy Next Door</h1>
     </header>
 
-    <div class="parallax__layer parallax_0">
+    <div class="parallax__layer parallax_layer--0">
 
       <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
