added image inline styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="parallax">
 
     <div class="parallax__layer parallax_layer--background">
-      <img src="/files/photos/andreasontractor.png" alt="Andreas on his tractor">
+      <img src="/files/photos/andreasontractor.png" alt="Andreas on his tractor" style="width:100%;">
     </div>
 
     <header class="parallax__layer parallax_layer--foreground">
