--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="parallax">
 
-    <div class="parallax_layer parallax_layer--background banner">
+    <div class="parallax_layer parallax_layer--background2 banner">
       <img src="/files/photos/andreasontractor.png" alt="Andreas on his tractor" style="width:100%;">
     </div>
 
@@ -17,7 +17,7 @@
       <h1>The Boy Next Door</h1>
     </header>
 
-    <div class="parallax_layer parallax_layer--0 description">
+    <div class="parallax_layer parallax_layer--background description">
 
       <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
