modified header image to be less memory intensive

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div class="parallax">
 
     <div class="parallax_layer parallax_layer--background2 banner">
-      <img src="/files/photos/andreasontractor.png" alt="Andreas on his tractor" style="width:100%;">
+      <img src="files/photos/andreasontractor.png" alt="Andreas on his tractor" style="width:100%;">
     </div>
 
     <header class="parallax_layer parallax_layer--foreground">
-      <h1>The Boy Next Door</h1>
+      <h1 id="title">The Boy Next Door</h1>
     </header>
 
     <div class="parallax_layer parallax_layer--background description">
