continued font styling work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="static/main.css">
-  <title>The Boy Next Door</title>
+  <meta description="Lawn care and snow removal services for the greater Lexington area.">
+  <title>The Boy Next Door Lawn Services</title>
 </head>
 
 <body>
