added javascript file to control banner image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="parallax">
 
     <div class="parallax_layer parallax_layer--background2 banner">
-      <img src="files/photos/andreasontractor.png" alt="Andreas on his tractor" style="width:100%;">
+      <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor" width="100%">
     </div>
 
     <header class="parallax_layer parallax_layer--foreground">
@@ -28,6 +28,10 @@
 
 
   </div>
+  <footer>
+    <script type="text/javascript" src="static/main-image-swap.js"></script>
+  </footer>
+
 </body>
 
 </html>
