added navigation buttons and tweaked parallax

--- a/index.html
+++ b/index.html
@@ -4,26 +4,37 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="static/main.css">
   <meta description="Lawn care and snow removal services for the greater Lexington area.">
-  <title>The Boy Next Door Lawn Services</title>
+  <title>The Boy Next Door Outdoor Care Company</title>
 </head>
 
 <body>
   <div class="parallax">
 
-    <div class="parallax_layer parallax_layer--background2 banner">
-      <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor" width="100%">
-    </div>
+      <div class="parallax_layer parallax_layer--background3 banner">
+        <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor" width="100%">
+      </div>
 
-    <header class="parallax_layer parallax_layer--foreground">
-      <h1 id="title">The Boy Next Door</h1>
-    </header>
+      <header class="parallax_layer parallax_layer--foreground">
+        <h1 id="title">The Boy Next Door</h1>
+      </header>
 
-    <div class="parallax_layer parallax_layer--background description">
+      <div class="parallax_layer parallax_layer--background description">
 
-      <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
+        <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
-    </div>
+      </div>
 
+      <div class="parallax_layer parallax_layer--background2">
+        <nav class="navigation">
+          <button>BUTTON 1</button>
+          <button>BUTTON 2</button>
+        </nav>
+        <nav class="navigation">
+          <button>BUTTON 3</button>
+          <button>BUTTON 4</button>
+        </nav>
+
+      </div>
 
 
 
