adding navigation and refining styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="parallax">
 
       <div class="parallax_layer parallax_layer--background3 banner">
-        <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor" width="100%">
+        <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor">
       </div>
 
       <header class="parallax_layer parallax_layer--foreground">
@@ -21,12 +21,15 @@
       <div class="parallax_layer parallax_layer--background description">
 
         <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
+        <div id="description" style="margin-top:110vh;"></div>
 
+        <p>CONTACT ME</p>
+        
       </div>
 
       <div class="parallax_layer parallax_layer--background2">
         <nav class="navigation">
-          <button>BUTTON 1</button>
+          <a href="#description"><button>BUTTON 1</button></a>
           <button>BUTTON 2</button>
         </nav>
         <nav class="navigation">
@@ -38,7 +41,11 @@
 
 
 
+
+
+
   </div>
+
   <footer>
     <script type="text/javascript" src="static/main-image-swap.js"></script>
   </footer>
