added locationmarker div styles to allow for navigational links within site

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       <div class="parallax_layer parallax_layer--background description">
 
         <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
-        <div id="description" style="margin-top:110vh;"></div>
+        <div id="description" class="locationmarker"></div>
 
         <p>CONTACT ME</p>
-        
+
       </div>
 
       <div class="parallax_layer parallax_layer--background2">
         <nav class="navigation">
-          <a href="#description"><button>BUTTON 1</button></a>
+          <a href="#description"><button>About Me</button></a>
           <button>BUTTON 2</button>
         </nav>
         <nav class="navigation">
