added contact me button

--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
       <div class="parallax_layer parallax_layer--background2">
         <nav class="navigation">
           <a href="#description"><button>About Me</button></a>
-          <button>BUTTON 2</button>
-        </nav>
-        <nav class="navigation">
-          <button>BUTTON 3</button>
-          <button>BUTTON 4</button>
+          <a href=""><button>Contact</button></a>
         </nav>
 
       </div>
