fixed styles for locationmarkers

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
       <div class="parallax_layer parallax_layer--background description">
 
         <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
-        <div id="description" class="locationmarker"></div>
+        <div id="description" class="locationmarker" style="top: 226vh;"></div>
 
         <p>CONTACT ME</p>
+        <div id="contactme" class="locationmarker" style="top: 300vh;"></div>
 
       </div>
 
       <div class="parallax_layer parallax_layer--background2">
         <nav class="navigation">
           <a href="#description"><button>About Me</button></a>
-          <a href=""><button>Contact</button></a>
+          <a href="#contactme"><button>Contact</button></a>
         </nav>
 
       </div>
