styled text in buttons and description

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
         <div id="description" class="locationmarker" style="top: 226vh;"></div>
 
-        <p>CONTACT ME</p>
-        <div id="contactme" class="locationmarker" style="top: 300vh;"></div>
+        <h3>CONTACT ME</h3>
+
+        <div id="contactme" class="locationmarker" style="top: 360vh;"></div>
 
       </div>
 
