removed location markers

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="parallax">
 
-      <div class="parallax_layer parallax_layer--background3 banner">
+      <div id="banner" class="parallax_layer parallax_layer--background3 banner">
         <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor">
       </div>
 
@@ -22,6 +22,7 @@
         <nav class="navigation">
           <a href="#description"><button>About Me</button></a>
           <a href="#contactme"><button>Contact</button></a>
+          <a href="#banner"><button>Back to top</button></a>
         </nav>
 
       </div>
@@ -29,12 +30,10 @@
 
       <div class="parallax_layer parallax_layer--background description">
 
-        <p>I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
-        <div id="description" class="locationmarker" style="top: 226vh;"></div>
+        <p id="description">I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
-        <h3>CONTACT ME</h3>
+        <h3 id="contactme">CONTACT ME</h3>
 
-        <div id="contactme" class="locationmarker" style="top: 400vh;"></div>
 
       </div>
 
