--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navigation">
           <a href="#description"><button>About Me</button></a>
           <a href="#contactme"><button>Contact</button></a>
-          <a href="#banner"><button>Back to top</button></a>
+          <a href="#banner" id="backtotopbutton" style="visibility: hidden;"><button>Back to top</button></a>
         </nav>
 
       </div>
