--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   <footer>
     <script type="text/javascript" src="static/main-image-swap.js"></script>
+    <script type="text/javascript" src="static/nav-buttons.js"></script>
   </footer>
 
 </body>
