--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="static/main.css">
+  <link rel="stylesheet" type="text/css" href="/static/main.css">
   <meta description="Lawn care and snow removal services for the greater Lexington area.">
   <title>The Boy Next Door Outdoor Care Company</title>
 </head>
