added email address to contact me section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
         <h3 id="contactme">CONTACT ME</h3>
 
+        <p>theboynextdoormowing@gmail.com</p>
+
+
+
+
         <div id="webdesigntag" class="parallax_layer parallax_layer--background">
           <p></p>
           <p>web design by <a target="_blank" href="http://chrispadil.la">Chris Padilla</a></p>
