--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
 
-      <div class="parallax_layer parallax_layer--background description">
+      <div class="parallax_layer parallax_layer--background main-content">
 
         <p id="description">I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
