tweaked contact info styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <p id="description">I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
-        <div>
+        <div class="contact-info">
           <h3 id="contactme">CONTACT ME</h3>
 
           <p>theboynextdoormowing@gmail.com</p>
