updated email address to new address

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="contact-info">
           <h2 id="contactme">CONTACT ME</h2>
 
-          <p>theboynextdoormowing@gmail.com</p>
+          <p>theboynextdoorservices@gmail.com</p>
         </div>
 
 
