working on image swap script

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="parallax">
 
       <div id="banner" class="parallax_layer parallax_layer--background3 banner">
-        <img id="banner-image" src="files/photos/andreasontractor.png" alt="Andreas on his tractor">
+        <img id="banner-image1" src="files/photos/andreasontractor.png" alt="Andreas on his tractor">
+        <img id="banner-image2" src="files/photos/andreasonsnowblower.png" alt="Andreas on his snowblower" style="visibility: hidden;">  
       </div>
 
       <header class="parallax_layer parallax_layer--foreground">
