more work on image script4

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <div id="banner" class="parallax_layer parallax_layer--background3 banner">
         <img id="banner-image1" src="files/photos/andreasontractor.png" alt="Andreas on his tractor">
-        <img id="banner-image2" src="files/photos/andreasonsnowblower.png" alt="Andreas on his snowblower" style="visibility: hidden;">  
+        <img id="banner-image2" src="files/photos/andreasonsnowblower.png" alt="Andreas on his snowblower">  
       </div>
 
       <header class="parallax_layer parallax_layer--foreground">
