working on fixing scroll buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <div id="banner" class="parallax_layer parallax_layer--background3 banner">
         <img id="banner-image1" src="files/photos/andreasontractor.png" alt="Andreas on his tractor">
-        <img id="banner-image2" src="files/photos/andreasonsnowblower.png" alt="Andreas on his snowblower">  
+        <img id="banner-image2" src="files/photos/andreasonsnowblower.png" alt="Andreas on his snowblower">
       </div>
 
       <header class="parallax_layer parallax_layer--foreground">
@@ -21,8 +21,8 @@
 
       <div class="parallax_layer parallax_layer--navigation">
         <nav class="navigation">
-          <a href="#description"><button>About Me</button></a>
-          <a href="#contactme"><button>Contact</button></a>
+          <a href="#description" id="descriptionbutton"><button>About Me</button></a>
+          <a href="#contactme" id="contactbutton"><button>Contact</button></a>
           <a href="#banner" id="backtotopbutton" style="visibility: hidden;"><button>Back to top</button></a>
         </nav>
 
