working on fixing scroll buttons2

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <div class="parallax_layer parallax_layer--navigation">
         <nav class="navigation">
-          <a href="#description" id="descriptionbutton"><button>About Me</button></a>
-          <a href="#contactme" id="contactbutton"><button>Contact</button></a>
-          <a href="#banner" id="backtotopbutton" style="visibility: hidden;"><button>Back to top</button></a>
+          <button id="descriptionbutton">About Me</button></a>
+          <button id="contactbutton">Contact</button></a>
+          <button id="backtotopbutton" style="visibility: hidden;">Back to top</button></a>
         </nav>
 
       </div>
