working on fixing scroll buttons6

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <div class="parallax_layer parallax_layer--navigation">
         <nav class="navigation">
-          <button id="descriptionbutton">About Me</button></a>
-          <button id="contactbutton">Contact</button></a>
-          <button id="backtotopbutton" style="visibility: hidden;">Back to top</button></a>
+          <button id="descriptionbutton">About Me</button>
+          <button id="contactbutton">Contact</button>
+          <button id="backtotopbutton" style="visibility: hidden;">Back to top</button>
         </nav>
 
       </div>
