working on fixing scroll buttons7

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navigation">
           <button id="descriptionbutton">About Me</button>
           <button id="contactbutton">Contact</button>
-          <button id="backtotopbutton" style="visibility: hidden;">Back to top</button>
+          <button id="backtotopbutton" style="visibility: visible;">Back to top</button>
         </nav>
 
       </div>
