testing importing the scrollTo module

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </div>
 
   <footer>
+    <script type='text/javascript' src='http://flesler.com/jquery/scrollTo/js/jquery.scrollTo-min.js' />
     <script type="text/javascript" src="/static/main-image-swap.js"></script>
     <script type="text/javascript" src="/static/nav-buttons.js"></script>
   </footer>
