--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div id="webdesigntag" class="parallax_layer parallax_layer--background">
           <p></p>
-          <p>web design by <a target="_blank" href="http://chrispadil.la">Chris Padilla</a></p>
+          <p>web design by <a target="_blank" href="https://chrispadil.la">Chris Padilla</a></p>
         </div>
       </div>
 
@@ -53,7 +53,6 @@
   </div>
 
   <footer>
-    <script type='text/javascript' src='http://flesler.com/jquery/scrollTo/js/jquery.scrollTo-min.js' />
     <script type="text/javascript" src="/static/main-image-swap.js"></script>
     <script type="text/javascript" src="/static/nav-buttons.js"></script>
   </footer>
