--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p id="description">I am a 14 year old boy named Andreas and I own the Boy Next Door outdoor care company. I do snow removal, lawn mowing and leaf mulching. Please contact me with any questions or interests you may have.</p>
 
         <div class="contact-info">
-          <h2 id="contactme">CONTACT ME</h2>
+          <h2 id="contact-me">CONTACT ME</h2>
 
           <p>theboynextdoorservices@gmail.com</p>
         </div>
