--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 
   </div>
+  <div id="contact-me2"></div>
 
   <footer>
     <script type="text/javascript" src="/static/main-image-swap.js"></script>
