fixed scroll to top button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <header class="parallax_layer parallax_layer--foreground">
         <h1 id="title">The Boy Next Door</h1>
       </header>
+      <div id="top"></div>
 
       <div class="parallax_layer parallax_layer--navigation">
         <nav class="navigation">
@@ -49,7 +50,7 @@
       </div>
 
 
-      <div id="contact-me2"></div>
+
   </div>
 
   <footer>
