contact me email is now a link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="contact-info">
           <h2 id="contact-me">CONTACT ME</h2>
 
-          <p>theboynextdoorservices@gmail.com</p>
+          <a href="mailto: theboynextdoorservices@gmail.com">theboynextdoorservices@gmail.com</a>
         </div>
 
 
